@@ -17,7 +17,7 @@ clean=$1
 
 patches="
 	binutils-indirect-4.patch
-	binutils-shr-94.patch
+	binutils-shr-95.patch
 	binutils-error-12.patch
 	binutils-signed-5.patch
 	binutils-weakdef-2.patch
