@@ -35,22 +35,22 @@ bfd/
 	(elf_backend_common_definition): Likewise.
 	(elf_backend_merge_symbol): Likewise.
 
-	* elf64-x86-64.c (elf64_x86_64_link_hash_table): Add
+	* elf64-x86-64.c (elf_x86_64_link_hash_table): Add
 	sdynsharablebss and srelsharablebss fields.
-	(elf64_x86_64_link_hash_table_create): Initialize sdynsharablebss
+	(elf_x86_64_link_hash_table_create): Initialize sdynsharablebss
 	and srelsharablebss.
-	(elf64_x86_64_create_dynamic_sections): Handle sdynsharablebss
+	(elf_x86_64_create_dynamic_sections): Handle sdynsharablebss
 	and srelsharablebss.
-	(elf64_x86_64_adjust_dynamic_symbol): Likewise.
-	(elf64_x86_64_size_dynamic_sections): Likewise.
-	(elf64_x86_64_finish_dynamic_symbol): Likewise.
-	(elf64_x86_64_add_symbol_hook): Handle sharable symbols.
-	(elf64_x86_64_elf_section_from_bfd_section): Likewise.
-	(elf64_x86_64_symbol_processing): Likewise.
-	(elf64_x86_64_merge_symbol): Likewise.
-	(elf64_x86_64_common_definition): Handle sharable sections.
-	(elf64_x86_64_common_section_index): Likewise.
-	(elf64_x86_64_common_section): Likewise.
+	(elf_x86_64_adjust_dynamic_symbol): Likewise.
+	(elf_x86_64_size_dynamic_sections): Likewise.
+	(elf_x86_64_finish_dynamic_symbol): Likewise.
+	(elf_x86_64_add_symbol_hook): Handle sharable symbols.
+	(elf_x86_64_elf_section_from_bfd_section): Likewise.
+	(elf_x86_64_symbol_processing): Likewise.
+	(elf_x86_64_merge_symbol): Likewise.
+	(elf_x86_64_common_definition): Handle sharable sections.
+	(elf_x86_64_common_section_index): Likewise.
+	(elf_x86_64_common_section): Likewise.
 
 	* elflink.c (_bfd_elf_create_dynamic_sections): Handle
 	.dynsharablebss section.
@@ -121,10 +121,10 @@ ld/
 	* scripttempl/elf.sc: Support sharable sections.
 
 diff --git a/bfd/elf-bfd.h b/bfd/elf-bfd.h
-index 74348d3..c508278 100644
+index cc83588..de441d9 100644
 --- a/bfd/elf-bfd.h
 +++ b/bfd/elf-bfd.h
-@@ -2071,6 +2071,28 @@ extern bfd_boolean bfd_elf_link_add_symbols
+@@ -2089,6 +2089,28 @@ extern bfd_boolean bfd_elf_link_add_symbols
    (bfd *, struct bfd_link_info *);
  extern bfd_boolean _bfd_elf_add_dynamic_entry
    (struct bfd_link_info *, bfd_vma, bfd_vma);
@@ -154,10 +154,10 @@ index 74348d3..c508278 100644
  extern bfd_boolean bfd_elf_link_record_dynamic_symbol
    (struct bfd_link_info *, struct elf_link_hash_entry *);
 diff --git a/bfd/elf.c b/bfd/elf.c
-index 20b82a7..3b72dcc 100644
+index de0ab61..84be4ca 100644
 --- a/bfd/elf.c
 +++ b/bfd/elf.c
-@@ -2012,6 +2012,8 @@ static const struct bfd_elf_special_section special_sections_g[] =
+@@ -2090,6 +2090,8 @@ static const struct bfd_elf_special_section special_sections_g[] =
    { STRING_COMMA_LEN (".gnu.liblist"),     0, SHT_GNU_LIBLIST, SHF_ALLOC },
    { STRING_COMMA_LEN (".gnu.conflict"),    0, SHT_RELA,        SHF_ALLOC },
    { STRING_COMMA_LEN (".gnu.hash"),        0, SHT_GNU_HASH,    SHF_ALLOC },
@@ -166,7 +166,7 @@ index 20b82a7..3b72dcc 100644
    { NULL,                        0,        0, 0,               0 }
  };
  
-@@ -2066,6 +2068,8 @@ static const struct bfd_elf_special_section special_sections_s[] =
+@@ -2144,6 +2146,8 @@ static const struct bfd_elf_special_section special_sections_s[] =
    /* See struct bfd_elf_special_section declaration for the semantics of
       this special case where .prefix_length != strlen (.prefix).  */
    { ".stabstr",			5,  3, SHT_STRTAB, 0 },
@@ -175,7 +175,7 @@ index 20b82a7..3b72dcc 100644
    { NULL,                       0,  0, 0,          0 }
  };
  
-@@ -3447,6 +3451,32 @@ get_program_header_size (bfd *abfd, struct bfd_link_info *info)
+@@ -3589,6 +3593,32 @@ get_program_header_size (bfd *abfd, struct bfd_link_info *info)
  	}
      }
  
@@ -208,7 +208,7 @@ index 20b82a7..3b72dcc 100644
    /* Let the backend count up any program headers it might need.  */
    bed = get_elf_backend_data (abfd);
    if (bed->elf_backend_additional_program_headers)
-@@ -3614,6 +3644,8 @@ _bfd_elf_map_sections_to_segments (bfd *abfd, struct bfd_link_info *info)
+@@ -3756,6 +3786,8 @@ _bfd_elf_map_sections_to_segments (bfd *abfd, struct bfd_link_info *info)
        bfd_boolean phdr_in_segment = TRUE;
        bfd_boolean writable;
        int tls_count = 0;
@@ -217,7 +217,7 @@ index 20b82a7..3b72dcc 100644
        asection *first_tls = NULL;
        asection *dynsec, *eh_frame_hdr;
        bfd_size_type amt;
-@@ -3899,6 +3931,22 @@ _bfd_elf_map_sections_to_segments (bfd *abfd, struct bfd_link_info *info)
+@@ -4059,6 +4091,22 @@ _bfd_elf_map_sections_to_segments (bfd *abfd, struct bfd_link_info *info)
  		first_tls = s;
  	      tls_count++;
  	    }
@@ -240,7 +240,7 @@ index 20b82a7..3b72dcc 100644
  	}
  
        /* If there are any SHF_TLS output sections, add PT_TLS segment.  */
-@@ -3926,6 +3974,60 @@ _bfd_elf_map_sections_to_segments (bfd *abfd, struct bfd_link_info *info)
+@@ -4086,6 +4134,60 @@ _bfd_elf_map_sections_to_segments (bfd *abfd, struct bfd_link_info *info)
  	  pm = &m->next;
  	}
  
@@ -301,7 +301,7 @@ index 20b82a7..3b72dcc 100644
        /* If there is a .eh_frame_hdr section, throw in a PT_GNU_EH_FRAME
  	 segment.  */
        eh_frame_hdr = elf_tdata (abfd)->eh_frame_hdr;
-@@ -4444,6 +4546,7 @@ assign_file_positions_for_load_sections (bfd *abfd,
+@@ -4604,6 +4706,7 @@ assign_file_positions_for_load_sections (bfd *abfd,
  	  align = (bfd_size_type) 1 << bfd_get_section_alignment (abfd, sec);
  
  	  if ((p->p_type == PT_LOAD
@@ -310,10 +310,10 @@ index 20b82a7..3b72dcc 100644
  	      && (this_hdr->sh_type != SHT_NOBITS
  		  || ((this_hdr->sh_flags & SHF_ALLOC) != 0
 diff --git a/bfd/elf32-i386.c b/bfd/elf32-i386.c
-index 6ec2c2e..8fa5d6f 100644
+index ae749c6..68cc630 100644
 --- a/bfd/elf32-i386.c
 +++ b/bfd/elf32-i386.c
-@@ -684,6 +684,9 @@ struct elf_i386_link_hash_table
+@@ -686,6 +686,9 @@ struct elf_i386_link_hash_table
  
    /* Value used to fill the last word of the first plt entry.  */
    bfd_byte plt0_pad_byte;
@@ -354,7 +354,7 @@ index 6ec2c2e..8fa5d6f 100644
      abort ();
  
    if (htab->is_vxworks
-@@ -2011,17 +2025,23 @@ elf_i386_adjust_dynamic_symbol (struct bfd_link_info *info,
+@@ -2048,17 +2062,23 @@ elf_i386_adjust_dynamic_symbol (struct bfd_link_info *info,
       both the dynamic object and the regular object will refer to the
       same memory location for the variable.  */
  
@@ -381,7 +381,7 @@ index 6ec2c2e..8fa5d6f 100644
    return _bfd_elf_adjust_dynamic_copy (h, s);
  }
  
-@@ -2535,6 +2555,7 @@ elf_i386_size_dynamic_sections (bfd *output_bfd ATTRIBUTE_UNUSED,
+@@ -2596,6 +2616,7 @@ elf_i386_size_dynamic_sections (bfd *output_bfd ATTRIBUTE_UNUSED,
  	  || s == htab->elf.sgotplt
  	  || s == htab->elf.iplt
  	  || s == htab->elf.igotplt
@@ -389,7 +389,7 @@ index 6ec2c2e..8fa5d6f 100644
  	  || s == htab->sdynbss)
  	{
  	  /* Strip this section if we don't need it; see the
-@@ -4329,21 +4350,27 @@ do_glob_dat:
+@@ -4388,21 +4409,27 @@ do_glob_dat:
      {
        Elf_Internal_Rela rel;
        bfd_byte *loc;
@@ -420,7 +420,7 @@ index 6ec2c2e..8fa5d6f 100644
        bfd_elf32_swap_reloc_out (output_bfd, &rel, loc);
      }
  
-@@ -4632,7 +4659,8 @@ elf_i386_add_symbol_hook (bfd * abfd,
+@@ -4698,7 +4725,8 @@ elf_i386_add_symbol_hook (bfd * abfd,
        && ELF_ST_TYPE (sym->st_info) == STT_GNU_IFUNC)
      elf_tdata (info->output_bfd)->has_ifunc_symbols = TRUE;
  
@@ -430,7 +430,7 @@ index 6ec2c2e..8fa5d6f 100644
  }
  
  #define TARGET_LITTLE_SYM		bfd_elf32_i386_vec
-@@ -4684,6 +4712,19 @@ elf_i386_add_symbol_hook (bfd * abfd,
+@@ -4751,6 +4779,19 @@ elf_i386_add_symbol_hook (bfd * abfd,
  #undef	elf_backend_post_process_headers
  #define	elf_backend_post_process_headers	_bfd_elf_set_osabi
  
@@ -451,10 +451,10 @@ index 6ec2c2e..8fa5d6f 100644
  
  /* FreeBSD support.  */
 diff --git a/bfd/elf64-x86-64.c b/bfd/elf64-x86-64.c
-index 82a869a..af98341 100644
+index 3dd16ba..ce7ef97 100644
 --- a/bfd/elf64-x86-64.c
 +++ b/bfd/elf64-x86-64.c
-@@ -497,6 +497,9 @@ struct elf64_x86_64_link_hash_table
+@@ -514,6 +514,9 @@ struct elf_x86_64_link_hash_table
    /* The offset into sgot of the GOT entry used by the PLT entry
       above.  */
    bfd_vma tlsdesc_got;
@@ -464,16 +464,16 @@ index 82a869a..af98341 100644
  };
  
  /* Get the x86-64 ELF linker hash table from a link_info structure.  */
-@@ -639,6 +642,8 @@ elf64_x86_64_link_hash_table_create (bfd *abfd)
+@@ -654,6 +657,8 @@ elf_x86_64_link_hash_table_create (bfd *abfd)
    ret->tls_ld_got.refcount = 0;
    ret->sgotplt_jump_table_size = 0;
    ret->tls_module_base = NULL;
 +  ret->sdynsharablebss = NULL;
 +  ret->srelsharablebss = NULL;
  
-   ret->loc_hash_table = htab_try_create (1024,
- 					 elf64_x86_64_local_htab_hash,
-@@ -687,10 +692,19 @@ elf64_x86_64_create_dynamic_sections (bfd *dynobj, struct bfd_link_info *info)
+   if (ABI_64_P (abfd))
+     {
+@@ -720,10 +725,19 @@ elf_x86_64_create_dynamic_sections (bfd *dynobj,
  
    htab->sdynbss = bfd_get_section_by_name (dynobj, ".dynbss");
    if (!info->shared)
@@ -495,7 +495,7 @@ index 82a869a..af98341 100644
      abort ();
  
    return TRUE;
-@@ -1858,17 +1872,23 @@ elf64_x86_64_adjust_dynamic_symbol (struct bfd_link_info *info,
+@@ -1925,6 +1939,8 @@ elf_x86_64_adjust_dynamic_symbol (struct bfd_link_info *info,
    if (htab == NULL)
      return FALSE;
  
@@ -504,16 +504,18 @@ index 82a869a..af98341 100644
    /* We must generate a R_X86_64_COPY reloc to tell the dynamic linker
       to copy the initial value out of the dynamic object and into the
       runtime process image.  */
-   if ((h->root.u.def.section->flags & SEC_ALLOC) != 0)
+@@ -1932,12 +1948,16 @@ elf_x86_64_adjust_dynamic_symbol (struct bfd_link_info *info,
      {
--      htab->srelbss->size += sizeof (Elf64_External_Rela);
+       const struct elf_backend_data *bed;
+       bed = get_elf_backend_data (info->output_bfd);
+-      htab->srelbss->size += bed->s->sizeof_rela;
 +      if (elf_section_flags (h->root.u.def.section) & SHF_GNU_SHARABLE)
 +	{
-+	  htab->srelsharablebss->size += sizeof (Elf64_External_Rela);
++	  htab->srelsharablebss->size += bed->s->sizeof_rela;
 +	  s = htab->sdynsharablebss;
 +	}
 +      else
-+	htab->srelbss->size += sizeof (Elf64_External_Rela);
++	htab->srelbss->size += bed->s->sizeof_rela;
        h->needs_copy = 1;
      }
  
@@ -522,7 +524,7 @@ index 82a869a..af98341 100644
    return _bfd_elf_adjust_dynamic_copy (h, s);
  }
  
-@@ -2360,6 +2380,7 @@ elf64_x86_64_size_dynamic_sections (bfd *output_bfd ATTRIBUTE_UNUSED,
+@@ -2458,6 +2478,7 @@ elf_x86_64_size_dynamic_sections (bfd *output_bfd,
  	  || s == htab->elf.sgotplt
  	  || s == htab->elf.iplt
  	  || s == htab->elf.igotplt
@@ -530,7 +532,7 @@ index 82a869a..af98341 100644
  	  || s == htab->sdynbss)
  	{
  	  /* Strip this section if we don't need it; see the
-@@ -3951,13 +3972,19 @@ do_glob_dat:
+@@ -4031,13 +4052,19 @@ do_glob_dat:
    if (h->needs_copy)
      {
        Elf_Internal_Rela rela;
@@ -551,16 +553,16 @@ index 82a869a..af98341 100644
  	abort ();
  
        rela.r_offset = (h->root.u.def.value
-@@ -3965,7 +3992,7 @@ do_glob_dat:
+@@ -4045,7 +4072,7 @@ do_glob_dat:
  		       + h->root.u.def.section->output_offset);
-       rela.r_info = ELF64_R_INFO (h->dynindx, R_X86_64_COPY);
+       rela.r_info = htab->r_info (h->dynindx, R_X86_64_COPY);
        rela.r_addend = 0;
--      elf64_x86_64_append_rela (output_bfd, htab->srelbss, &rela);
-+      elf64_x86_64_append_rela (output_bfd, s, &rela);
+-      elf_append_rela (output_bfd, htab->srelbss, &rela);
++      elf_append_rela (output_bfd, s, &rela);
      }
  
    /* Mark _DYNAMIC and _GLOBAL_OFFSET_TABLE_ as absolute.  SYM may
-@@ -4261,7 +4288,8 @@ elf64_x86_64_add_symbol_hook (bfd *abfd,
+@@ -4349,7 +4376,8 @@ elf_x86_64_add_symbol_hook (bfd *abfd,
        && ELF_ST_TYPE (sym->st_info) == STT_GNU_IFUNC)
      elf_tdata (info->output_bfd)->has_ifunc_symbols = TRUE;
  
@@ -570,7 +572,7 @@ index 82a869a..af98341 100644
  }
  
  
-@@ -4277,7 +4305,8 @@ elf64_x86_64_elf_section_from_bfd_section (bfd *abfd ATTRIBUTE_UNUSED,
+@@ -4365,7 +4393,8 @@ elf_x86_64_elf_section_from_bfd_section (bfd *abfd ATTRIBUTE_UNUSED,
        *index_return = SHN_X86_64_LCOMMON;
        return TRUE;
      }
@@ -580,7 +582,7 @@ index 82a869a..af98341 100644
  }
  
  /* Process a symbol.  */
-@@ -4295,22 +4324,26 @@ elf64_x86_64_symbol_processing (bfd *abfd ATTRIBUTE_UNUSED,
+@@ -4383,22 +4412,26 @@ elf_x86_64_symbol_processing (bfd *abfd ATTRIBUTE_UNUSED,
        asym->value = elfsym->internal_elf_sym.st_size;
        /* Common symbol doesn't set BSF_GLOBAL.  */
        asym->flags &= ~BSF_GLOBAL;
@@ -592,7 +594,7 @@ index 82a869a..af98341 100644
  }
  
  static bfd_boolean
- elf64_x86_64_common_definition (Elf_Internal_Sym *sym)
+ elf_x86_64_common_definition (Elf_Internal_Sym *sym)
  {
    return (sym->st_shndx == SHN_COMMON
 -	  || sym->st_shndx == SHN_X86_64_LCOMMON);
@@ -601,7 +603,7 @@ index 82a869a..af98341 100644
  }
  
  static unsigned int
- elf64_x86_64_common_section_index (asection *sec)
+ elf_x86_64_common_section_index (asection *sec)
  {
    if ((elf_section_flags (sec) & SHF_X86_64_LARGE) == 0)
 -    return SHN_COMMON;
@@ -609,8 +611,8 @@ index 82a869a..af98341 100644
    else
      return SHN_X86_64_LCOMMON;
  }
-@@ -4319,7 +4352,7 @@ static asection *
- elf64_x86_64_common_section (asection *sec)
+@@ -4407,7 +4440,7 @@ static asection *
+ elf_x86_64_common_section (asection *sec)
  {
    if ((elf_section_flags (sec) & SHF_X86_64_LARGE) == 0)
 -    return bfd_com_section_ptr;
@@ -618,7 +620,7 @@ index 82a869a..af98341 100644
    else
      return &_bfd_elf_large_com_section;
  }
-@@ -4356,7 +4389,8 @@ elf64_x86_64_merge_symbol (struct bfd_link_info *info ATTRIBUTE_UNUSED,
+@@ -4444,7 +4477,8 @@ elf_x86_64_merge_symbol (struct bfd_link_info *info ATTRIBUTE_UNUSED,
        && h->root.type == bfd_link_hash_common
        && !*newdyn
        && bfd_is_com_section (*sec)
@@ -628,7 +630,7 @@ index 82a869a..af98341 100644
      {
        if (sym->st_shndx == SHN_COMMON
  	  && (elf_section_flags (*oldsec) & SHF_X86_64_LARGE) != 0)
-@@ -4364,13 +4398,26 @@ elf64_x86_64_merge_symbol (struct bfd_link_info *info ATTRIBUTE_UNUSED,
+@@ -4452,13 +4486,26 @@ elf_x86_64_merge_symbol (struct bfd_link_info *info ATTRIBUTE_UNUSED,
  	  h->root.u.c.p->section
  	    = bfd_make_section_old_way (oldbfd, "COMMON");
  	  h->root.u.c.p->section->flags = SEC_ALLOC;
@@ -658,10 +660,10 @@ index 82a869a..af98341 100644
  
  static int
 diff --git a/bfd/elflink.c b/bfd/elflink.c
-index 9fb347b..253d067 100644
+index 79256bf..906d323 100644
 --- a/bfd/elflink.c
 +++ b/bfd/elflink.c
-@@ -382,6 +382,27 @@ _bfd_elf_create_dynamic_sections (bfd *abfd, struct bfd_link_info *info)
+@@ -383,6 +383,27 @@ _bfd_elf_create_dynamic_sections (bfd *abfd, struct bfd_link_info *info)
  	  if (s == NULL
  	      || ! bfd_set_section_alignment (abfd, s, bed->s->log_file_align))
  	    return FALSE;
@@ -689,9 +691,9 @@ index 9fb347b..253d067 100644
  	}
      }
  
-@@ -12680,3 +12701,219 @@ _bfd_elf_copy_link_hash_symbol_type (bfd *abfd ATTRIBUTE_UNUSED,
- 
-   ehdest->type = ehsrc->type;
+@@ -12751,3 +12772,219 @@ elf_append_rel (bfd *abfd, asection *s, Elf_Internal_Rela *rel)
+   BFD_ASSERT (loc + bed->s->sizeof_rel <= s->contents + s->size);
+   bed->s->swap_reloca_out (abfd, rel, loc);
  }
 +
 +asection _bfd_elf_sharable_com_section
@@ -910,10 +912,10 @@ index 9fb347b..253d067 100644
 +  return TRUE;
 +}
 diff --git a/bfd/elfxx-ia64.c b/bfd/elfxx-ia64.c
-index 7fde3d5..3b5d38b 100644
+index d42ad89..03de115 100644
 --- a/bfd/elfxx-ia64.c
 +++ b/bfd/elfxx-ia64.c
-@@ -1570,7 +1570,8 @@ elfNN_ia64_add_symbol_hook (bfd *abfd,
+@@ -1576,7 +1576,8 @@ elfNN_ia64_add_symbol_hook (bfd *abfd,
        *valp = sym->st_size;
      }
  
@@ -923,7 +925,7 @@ index 7fde3d5..3b5d38b 100644
  }
  
  /* Return the number of additional phdrs we will need.  */
-@@ -6075,6 +6076,19 @@ elfNN_vms_close_and_cleanup (bfd *abfd)
+@@ -6068,6 +6069,19 @@ elfNN_vms_close_and_cleanup (bfd *abfd)
  #define elf_backend_special_sections	elfNN_ia64_special_sections
  #define elf_backend_default_execstack	0
  
@@ -944,10 +946,10 @@ index 7fde3d5..3b5d38b 100644
     SHF_LINK_ORDER. But it doesn't set the sh_link or sh_info fields.
     We don't want to flood users with so many error messages. We turn
 diff --git a/binutils/readelf.c b/binutils/readelf.c
-index c5e9b4f..83321fd 100644
+index b8ab55b..67a28e4 100644
 --- a/binutils/readelf.c
 +++ b/binutils/readelf.c
-@@ -1320,6 +1320,8 @@ dump_relocations (FILE * file,
+@@ -1300,6 +1300,8 @@ dump_relocations (FILE * file,
  			sec_name = "ABS";
  		      else if (psym->st_shndx == SHN_COMMON)
  			sec_name = "COMMON";
@@ -956,7 +958,7 @@ index c5e9b4f..83321fd 100644
  		      else if (elf_header.e_machine == EM_MIPS
  			       && psym->st_shndx == SHN_MIPS_SCOMMON)
  			sec_name = "SCOMMON";
-@@ -2645,6 +2647,7 @@ get_segment_type (unsigned long p_type)
+@@ -2750,6 +2752,7 @@ get_segment_type (unsigned long p_type)
      case PT_SHLIB:	return "SHLIB";
      case PT_PHDR:	return "PHDR";
      case PT_TLS:	return "TLS";
@@ -964,7 +966,7 @@ index c5e9b4f..83321fd 100644
  
      case PT_GNU_EH_FRAME:
  			return "GNU_EH_FRAME";
-@@ -7253,6 +7256,8 @@ get_symbol_index_type (unsigned int type)
+@@ -8394,6 +8397,8 @@ get_symbol_index_type (unsigned int type)
      case SHN_UNDEF:	return "UND";
      case SHN_ABS:	return "ABS";
      case SHN_COMMON:	return "COM";
@@ -974,7 +976,7 @@ index c5e9b4f..83321fd 100644
        if (type == SHN_IA_64_ANSI_COMMON
  	  && elf_header.e_machine == EM_IA_64
 diff --git a/gas/config/obj-elf.c b/gas/config/obj-elf.c
-index 4bd4514..7f2b6bb 100644
+index c6dc8d6..8411acd 100644
 --- a/gas/config/obj-elf.c
 +++ b/gas/config/obj-elf.c
 @@ -73,6 +73,7 @@ static void obj_elf_symver (int);
@@ -1034,7 +1036,7 @@ index 4bd4514..7f2b6bb 100644
  obj_elf_lcomm (int ignore ATTRIBUTE_UNUSED)
  {
    symbolS *symbolP = s_comm_internal (0, s_lcomm_internal);
-@@ -598,11 +634,17 @@ obj_elf_change_section (const char *name,
+@@ -604,11 +640,17 @@ obj_elf_change_section (const char *name,
  
  		 .section .lbss,"aw",@progbits
  
@@ -1053,7 +1055,7 @@ index 4bd4514..7f2b6bb 100644
  	      && ssect->type != SHT_FINI_ARRAY
  	      && ssect->type != SHT_PREINIT_ARRAY)
 diff --git a/include/bfdlink.h b/include/bfdlink.h
-index af3c5c4..75591bd 100644
+index 0d6e9f8..d3c13f6 100644
 --- a/include/bfdlink.h
 +++ b/include/bfdlink.h
 @@ -354,6 +354,9 @@ struct bfd_link_info
@@ -1067,10 +1069,10 @@ index af3c5c4..75591bd 100644
       When producing executables the default is GENERATE_ERROR.
       When producing shared libraries the default is IGNORE.  The
 diff --git a/include/elf/common.h b/include/elf/common.h
-index e7ffac4..e93c3ce 100644
+index 01c519d..3f76440 100644
 --- a/include/elf/common.h
 +++ b/include/elf/common.h
-@@ -427,6 +427,7 @@
+@@ -429,6 +429,7 @@
  #define PT_SUNW_EH_FRAME PT_GNU_EH_FRAME      /* Solaris uses the same value */
  #define PT_GNU_STACK	(PT_LOOS + 0x474e551) /* Stack flags */
  #define PT_GNU_RELRO	(PT_LOOS + 0x474e552) /* Read-only after relocation */
@@ -1078,16 +1080,16 @@ index e7ffac4..e93c3ce 100644
  
  /* Program segment permissions, in program header p_flags field.  */
  
-@@ -500,6 +501,8 @@
- #define SHF_MASKOS	0x0FF00000	/* New value, Oct 4, 1999 Draft */
- #define SHF_MASKPROC	0xF0000000	/* Processor-specific semantics */
+@@ -511,6 +512,8 @@
+ 					   are not to be further
+ 					   relocated.  */
  
 +#define SHF_GNU_SHARABLE 0x01000000	/* sharable section */
 +
  /* Values of note segment descriptor types for core files.  */
  
  #define NT_PRSTATUS	1		/* Contains copy of prstatus struct */
-@@ -646,6 +649,9 @@
+@@ -657,6 +660,9 @@
  #define STT_LOPROC	13		/* Processor-specific semantics */
  #define STT_HIPROC	15		/* Processor-specific semantics */
  
@@ -1128,7 +1130,7 @@ index 0e93ad8..c82d6c9 100644
  if [ "x${host}" = "x${target}" ]; then
    case " $EMULATION_LIBPATH " in
 diff --git a/ld/emultempl/elf32.em b/ld/emultempl/elf32.em
-index 4fea6a9..8806a9f 100644
+index 9120f85..ca86c7c 100644
 --- a/ld/emultempl/elf32.em
 +++ b/ld/emultempl/elf32.em
 @@ -103,6 +103,7 @@ gld${EMULATION_NAME}_before_parse (void)
@@ -1139,7 +1141,7 @@ index 4fea6a9..8806a9f 100644
  }
  
  EOF
-@@ -1787,6 +1788,12 @@ gld${EMULATION_NAME}_place_orphan (asection *s,
+@@ -1812,6 +1813,12 @@ gld${EMULATION_NAME}_place_orphan (asection *s,
    int iself = s->owner->xvec->flavour == bfd_target_elf_flavour;
    unsigned int sh_type = iself ? elf_section_type (s) : SHT_NULL;
  
@@ -1153,10 +1155,10 @@ index 4fea6a9..8806a9f 100644
        && link_info.combreloc
        && (s->flags & SEC_ALLOC))
 diff --git a/ld/ldmain.c b/ld/ldmain.c
-index 08679ec..6ca43ac 100644
+index 5530dca..6d88479 100644
 --- a/ld/ldmain.c
 +++ b/ld/ldmain.c
-@@ -277,6 +277,7 @@ main (int argc, char **argv)
+@@ -282,6 +282,7 @@ main (int argc, char **argv)
    link_info.pei386_auto_import = -1;
    link_info.spare_dynamic_tags = 5;
    link_info.path_separator = ':';
@@ -1165,10 +1167,10 @@ index 08679ec..6ca43ac 100644
    ldfile_add_arch ("");
    emulation = get_emulation (argc, argv);
 diff --git a/ld/scripttempl/elf.sc b/ld/scripttempl/elf.sc
-index 5378afa..99b301b 100644
+index 37f7667..18d456d 100644
 --- a/ld/scripttempl/elf.sc
 +++ b/ld/scripttempl/elf.sc
-@@ -257,6 +257,40 @@ STACK="  .stack        ${RELOCATING-0}${RELOCATING+${STACK_ADDR}} :
+@@ -290,6 +290,40 @@ STACK="  .stack        ${RELOCATING-0}${RELOCATING+${STACK_ADDR}} :
      ${RELOCATING+${USER_LABEL_PREFIX}_stack = .;}
      *(.stack)
    }"
@@ -1209,7 +1211,7 @@ index 5378afa..99b301b 100644
  
  TEXT_START_ADDR="SEGMENT_START(\"text-segment\", ${TEXT_START_ADDR})"
  SHLIB_TEXT_START_ADDR="SEGMENT_START(\"text-segment\", ${SHLIB_TEXT_START_ADDR:-0})"
-@@ -336,6 +370,7 @@ eval $COMBRELOCCAT <<EOF
+@@ -370,6 +404,7 @@ eval $COMBRELOCCAT <<EOF
    .rel.got      ${RELOCATING-0} : { *(.rel.got) }
    .rela.got     ${RELOCATING-0} : { *(.rela.got) }
    ${OTHER_GOT_RELOC_SECTIONS}
